2006-08-10 Braden McDaniel  <braden@endoframe.com>

	Fixes to generate API documentation properly.

	* doc/Makefile.am (DOXYGEN_OUTPUT_FILES): Avoid redundantly
	listing files with wild cards.
	(CUSTOMIZED_IMAGES): Added variable to list customized images for
	the doxygen-generated documentation.
	(EXTRA_DIST): Refer to DOXYGEN_OUTPUT_FILES and CUSTOMIZED_IMAGES
	rather than manual in order to avoid pulling in the CVS
	subdirectory.
	(.PHONY): List html-local
	(html-local): Run doxygen here.
	(install-data-local): Made installdirs-local a prerequisite.
	Removed html as a prerequisite; since html-local is now phony, we
	don't want to regenerate the documentation as part of install.
	(dist-hook): Removed.

2006-08-10 Braden McDaniel  <braden@endoframe.com>

	* src/libopenvrml/Makefile.am: Qualify antlr-generated sources
	with $(srcdir) to prevent touch from creating the files in the
	builddir.

2006-08-08 Braden McDaniel  <braden@endoframe.com>

	Updated libtool library version numbers.

	* src/libopenvrml/Makefile.am (LIBRARY_VERSION): Updated to 6:0:0.
	* src/libopenvrml-gl/Makefile.am (LIBRARY_VERSION): Updated to
	6:2:0.

2006-08-08 Braden McDaniel  <braden@endoframe.com>

	* doc/index.doc: Documentation improvements.

2006-08-08 Braden McDaniel  <braden@endoframe.com>

	* doc/index.doc: Added the beginnings of a user guide.

2006-08-06 Braden McDaniel  <braden@endoframe.com>

	* doc/Makefile.am: Remove doxygen-generated files in a loop;
	otherwise, rm may complain of too many arguments.

2006-08-06 Braden McDaniel  <braden@endoframe.com>

	Doc-comment improvements.

	* src/libopenvrml/openvrml/browser.cpp
	* src/libopenvrml/openvrml/node.cpp
	* src/libopenvrml/openvrml/script.cpp

2006-08-06 Braden McDaniel  <braden@endoframe.com>

	Merged changes from 0.15.10 release.

	* NEWS: Added record of 0.15.0 release.

2006-08-05 Braden McDaniel  <braden@endoframe.com>

	* doc/Makefile.am: Remove doxygen-generated files before running