@@ -1,5 +1,10 @@
 2006-08-10 Braden McDaniel  <braden@endoframe.com>
 
+	* openvrml.spec.in: Package openvrml-config.h, openvrml-common.h,
+	openvrml-gl-config.h, and openrml-gl-common.h.
+
+2006-08-10 Braden McDaniel  <braden@endoframe.com>
+
 	Fixes to generate API documentation properly.
 
 	* doc/Makefile.am (DOXYGEN_OUTPUT_FILES): Avoid redundantly
